The CVE-2021-32559 is caused by the transitive dependency pywin32, which is actually not needed by this package.
pywin32 is pulled in by the docker dependency, but is only needed on
windows platforms (which ain't supported by this package).

By tigthening the dependency constrains of the docker dependency, we can
get rid of the optional (not needed) transitive pywin32 dependency.

Fix #30

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,9 @@ python = ">=3.6,<4"
 pyodbc = ">=4.0.27"
 numpy = ">=1.19.5"
 scipy = ">=1.2.1"
-docker = ">=5.0.3"
+# The `sys_platform` marker makes sure the docker dependency is only installed on
+# non windows platforms.
+docker = { version = ">=5.0.3", markers = "sys_platform != 'win32'"}
 pyftpdlib = ">=1.5.6"
 
 [tool.poetry.dev-dependencies]
