--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,13 +29,13 @@ jobs:
       - name: Get EXAPLUS
         run: bash .github/workflows/scripts/download_exaplus.sh "$(pwd)/.."
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@0.12.0
+        uses: exasol/python-toolbox/.github/actions/python-environment@1.0.1
         with:
           python-version: ${{ matrix.python-version }}
-          poetry-version: '1.8.2'
-      - name: Spawn EXASOL environemnt
+          poetry-version: "2.1.2"
+      - name: Spawn EXASOL environment
         run: |
-          poetry run python3 -m exasol_integration_test_docker_environment.main \
+          poetry run -- python3 -m exasol_integration_test_docker_environment.main \
               spawn-test-environment \
               --environment-name test \
               --database-port-forward 8888 \
@@ -43,7 +43,7 @@ jobs:
           sleep 120 # wait for SLC to be unpacked
       - name: Run all tests
         run: |
-          poetry run scripts/test/run_locally.sh \
+          poetry run -- scripts/test/run_locally.sh \
              --server "localhost:8888" \
              --odbc-driver="${{ steps.get-odbc-driver.outputs.so-file }}"
         env:
