--- a/.github/workflows/check_version.yaml
+++ b/.github/workflows/check_version.yaml
@@ -4,13 +4,15 @@ on: pull_request
 
 jobs:
   check-version-numbers:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
+    permissions:
+      contents: read
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@1.0.1
+        uses: exasol/python-toolbox/.github/actions/python-environment@1.6.0
         with:
           python-version: '3.10'
           poetry-version: "2.1.2"
