--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,14 +10,16 @@ jobs:
 
   cd-job:
     name: Continuous Delivery
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
+    permissions:
+      contents: write
     steps:
 
       - name: SCM Checkout
         uses: actions/checkout@v4
 
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@1.0.1
+        uses: exasol/python-toolbox/.github/actions/python-environment@1.6.0
         with:
           python-version: "3.10"
           poetry-version: "2.1.2"
